--- a/views/node.html
+++ b/views/node.html
@@ -32,7 +32,7 @@
                 <br>
 
                 <span class="label label-success label-status">{{node.status}}</span>
-                <button type="button" class="btn btn-default">
+                <button id="btn-view-camera" type="button" class="btn btn-default">
                     <span class="glyphicon glyphicon-camera"></span> Camera
                 </button>
                 <br/> <br/>
