Tidying up streaming video page

--- a/views/node.html
+++ b/views/node.html
@@ -31,9 +31,9 @@
                 </ul>
                 <br>
 
-                <span class="label label-success label-status">{{node.status}}</span>
-                <button id="btn-view-camera" type="button" class="btn btn-default">
-                    <span class="glyphicon glyphicon-camera"></span> Camera
+                <!-- <span class="label label-success label-status">{{node.status}}</span> -->
+                <button id="btn-view-camera" type="button" class="btn btn-info">
+                    <span class="glyphicon glyphicon-camera"></span> View Camera
                 </button>
                 <br/> <br/>
             </div>
