--- a/views/layout.html
+++ b/views/layout.html
@@ -169,7 +169,7 @@
       });
     });
 
-    var socket = io.connect('http://'+ host);
+    var socket = io.connect('https://'+ host);
     socket.on('connected', function (data) {
       console.log(data);      
     });
