--- a/views/video.html
+++ b/views/video.html
@@ -130,7 +130,8 @@
             var server = "192.168.1.209:8080";
             var user = "user";
             var pass = "Reddoor74"
-            var protocol = location.protocol === "https:" ? "wss:" : "ws:";
+            //var protocol = location.protocol === "https:" ? "wss:" : "ws:";
+            var protocol = "ws";
             ws = new WebSocket(protocol + '//' + user + ":" + pass + "@" + server + '/stream/webrtc')
 
             function offer(stream) {
