--- a/views/video.html
+++ b/views/video.html
@@ -131,7 +131,7 @@
             var user = "user";
             var pass = "Reddoor74"
             //var protocol = location.protocol === "https:" ? "wss:" : "ws:";
-            var protocol = "http:";
+            var protocol = "ws:";
             ws = new WebSocket(protocol + '//' + user + ":" + pass + "@" + server + '/stream/webrtc')
 
             function offer(stream) {
