Pass IP address to the video page from the node detail page

--- a/views/node.html
+++ b/views/node.html
@@ -32,7 +32,7 @@
                 <br>
 
                 <!-- <span class="label label-success label-status">{{node.status}}</span> -->
-                <button id="btn-view-camera" type="button" class="btn btn-info">
+                <button id="btn-view-camera" data-ip="{{node.ip_address}}" type="button" class="btn btn-info">
                     <span class="glyphicon glyphicon-camera"></span> View Camera
                 </button>
                 <br/> <br/>
