--- a/views/layout.html
+++ b/views/layout.html
@@ -244,7 +244,7 @@
       });
 
       $('#btn-view-camera').click(function(){
-        window.location = "/videos";
+        window.location = "/videos/" + $(this).data("ip");
       });
     }
 
