--- a/views/video.html
+++ b/views/video.html
@@ -9,7 +9,7 @@
     <div class="x_content">
       <script src="https://rawgit.com/dorukeker/gyronorm.js/master/dist/gyronorm.complete.min.js" async></script>
       <script type="text/javascript">
-        var signalling_server_hostname = "192.168.1.209";
+        var signalling_server_hostname = "{{ip}}";
         var signalling_server_address = signalling_server_hostname + ':8080';
         var isFirefox = typeof InstallTrigger !== 'undefined'; // Firefox 1.0+
 
@@ -127,7 +127,7 @@
             document.getElementById("stop").disabled = false;
             document.getElementById("start").disabled = true;
             document.documentElement.style.cursor = 'wait';
-            var server = "192.168.1.209:8080";
+            var server = "{{ip}}:8080";
             var user = "user";
             var pass = "Reddoor74"
             //var protocol = location.protocol === "https:" ? "wss:" : "ws:";
